
[package]
name = "safecoin-bpf-nihao"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Safecoin Maintainers <maintainers@safecoin.com>"]
repository = "https://github.com/Fair-Exchange/Safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
crypto-mac = "^0.11.1"
safecoin-program = "=1.8.12"

 [lib]
name = "nihao"
crate-type = ["cdylib", "lib"]
